# MeshWeaver

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  AGENTS.md  AREA_NESTING_BUG_FIX.md  CLAUDE.md  Directory.Build.props  Directory.Packages.props  FAILING_TESTS.md  LICENSE  MIT License.md  MeshWeaver.sln  MeshWeaver.sln.DotSettings  MeshWeaver.slnx  OpenSMC.sln  OpenSmc.sln.DotSettings  Readme.md  TypeInspector.csx  clean-expired-secrets.ps1  failing-tests.txt  nuget.config  publish-github.yml  run-failing-tests.sh  test-results-acme.txt  test-results-auth.txt  test-results-graph.txt  test-results-nodeops.txt  test-results-pathres.txt  test-run-results.txt
.aspire/: settings.json
.claude/: settings.json  settings.local.json
.config/: dotnet-tools.json
.github/: CODEOWNERS  pull_request_template.md
MeshWeaver.Application.AspNetCore/: MeshWeaver.Application.AspNetCore.csproj
MeshWeaver.Documentation.AI/: DocumentationAIExtensions.cs  MeshWeaver.Documentation.AI.csproj
MeshWeaver.Markdown/: ImgPathMarkdownExtension.cs  LayoutAreaComponentInfo.cs  LayoutAreaMarkdownParser.cs  MarkdownExtensions.cs  (+2 more)
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/meshweaver/: __init__.py  connection.py  content.py  envelope.py  mesh.py  types.py  worker.py
clients/python/meshweaver/examples/: __init__.py  finetune.py  pandas_node.py  standalone_hub.py
clients/python/scripts/: gen_proto.sh
clients/python/tests/: test_envelope.py  test_finetune.py  test_mesh.py  test_pandas_node.py  test_standalone_hub.py  test_worker.py
(+11343 files in other folders)
