[project]
name = "meshweaver"
version = "0.1.0"
description = "MeshWeaver mesh client — connect a Python process to the mesh over gRPC and use mesh features natively (the foreign-language counterpart of the MAUI/SignalR participant)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.68",
    "protobuf>=5.29",
]

[project.optional-dependencies]
# The pandas node example (meshweaver.examples.pandas_node) holds a live DataFrame.
examples = [
    "pandas>=2.0",
]
dev = [
    "grpcio-tools>=1.68",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pandas>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["meshweaver*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
